05-frontend-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hsm-frontend
  namespace: hsm
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hsm-frontend
    spec:
      containers:
        - name: hsm-frontend
          image: 361698339280.dkr.ecr.ap-southeast-1.amazonaws.com/hsm-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 32Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hsm-frontend
  namespace: hsm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: hsm-frontend
