backend-deployment-static.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hsm-static
  namespace: hsm
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hsm-static
    spec:
      containers:
        - name: hsm-static
          image: gcr.io/wiput-p/hsm-static:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hsm-static
  namespace: hsm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: hsm-static
