backend-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hsm-backend
  namespace: hsm
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hsm-backend
    spec:
      containers:
        - name: hsm-backend
          image: gcr.io/kmitl-hsm/hsm-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hsm-backend
  namespace: hsm
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: hsm-backend
