06-hsm-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hsm-ingress
  namespace: hsm
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: hsm.wiput.me
      http:
        paths:
          - path: /
            backend:
              serviceName: hsm-frontend
              servicePort: 80
          - path: /favicon.ico
            backend:
              serviceName: hsm-frontend
              servicePort: 80
          - path: /js*
            backend:
              serviceName: hsm-frontend
              servicePort: 80
          - path: /css*
            backend:
              serviceName: hsm-frontend
              servicePort: 80
          - path: /fonts*
            backend:
              serviceName: hsm-frontend
              servicePort: 80
          - path: /img*
            backend:
              serviceName: hsm-frontend
              servicePort: 80
          - path: /api*
            backend:
              serviceName: hsm-backend
              servicePort: 8000
          - path: /static*
            backend:
              serviceName: hsm-static
              servicePort: 80
          - path: /admin*
            backend:
              serviceName: hsm-backend
              servicePort: 8000
