gce-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  namespace: ingress-nginx
  name: gce-ingress
spec:
  backend:
    serviceName: ingress-nginx
    servicePort: 80
  tls:
    - secretName: cert-hsm
